--- a/src/Mycomponents/Body.css
+++ b/src/Mycomponents/Body.css
@@ -130,3 +130,23 @@
 .button1{
   background-color: white;
 }
+
+
+@media (max-width: 1280px)
+{
+.tab-container{
+ overflow-x: auto;
+}
+}
+@media (max-width: 780px)
+{
+.tab-container{
+ overflow: scroll;
+}
+}
+@media (max-width: 720px)
+{
+.eventslist{
+    padding: 70px 20px;
+}
+}
