--- a/src/Mycomponents/Subeventlist.css
+++ b/src/Mycomponents/Subeventlist.css
@@ -161,3 +161,12 @@ display: flex;
   color: #757575;
   font-size: 13px;
 }
+@media only screen  and (max-width:900px)
+{
+  .show-event{
+    display: block;
+  }
+  .grid{
+    display: block;
+  }
+}
